buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
    }
}
plugins {
    id "org.sonarqube" version "3.1.1"
}
apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'maven-publish'
apply plugin: 'org.parchmentmc.librarian.forgegradle'

version = "${version}"
group = 'cy.jdkdigital.productivebees'
archivesBaseName = 'productivebees'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: 'parchment', version: '1.18.1-2022.03.06-1.18.2'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"

            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
//            property 'mixin.env.disableRefMap', 'true'

            mods {
                productivebees {
                    source sourceSets.main
                }
            }
        }

        server {
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"

            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
//            property 'mixin.env.disableRefMap', 'true'

            mods {
                productivebees {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.disableRefMap', 'true'

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', 'productivebees', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                productivebees {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
// sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url "https://www.cursemaven.com"
    }
    flatDir {
        dirs 'mods'
    }
    maven {
        url 'https://www.dogforce-games.com/maven/'
    }
    maven {
        name = "JEI Maven"
        url "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        url 'https://maven.blamejared.com'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${forgeversion}"

    compileOnly fg.deobf("mezz.jei:jei-${jei_version}:api")
    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")

    implementation fg.deobf("curse.maven:the-one-probe-245211:3671753")
    implementation fg.deobf("curse.maven:jade-324717:3803226")
    implementation fg.deobf("curse.maven:jei-238222:3885885")
//    implementation fg.deobf("curse.maven:roughly-enough-items-310111:3929175")
//    implementation fg.deobf("curse.maven:trophymanager-510170:3929175")
    implementation fg.deobf("curse.maven:jumpy-boats-542110:3564082")
    implementation fg.deobf("curse.maven:everythingcopper-579545:3759328")
    implementation fg.deobf("curse.maven:alltheores-405593:3860919")
    implementation fg.deobf("curse.maven:allthecompressed-514045:3812893")
//    implementation fg.deobf("curse.maven:all-the-tweaks-364120:3851716")
    implementation fg.deobf("curse.maven:allthemodium-364466:3862033")
    implementation fg.deobf("curse.maven:architectury-forge-419699:3929416")
    implementation fg.deobf("curse.maven:cloth-config-348521:3782776")
    implementation fg.deobf("curse.maven:powah-rearchitected-633483:3855683")
    implementation fg.deobf("curse.maven:flywheel-486392:3737402")
    implementation fg.deobf("curse.maven:create-328085:3737418")
//    implementation fg.deobf("curse.maven:rhino-416294:3837949")
//    implementation fg.deobf("curse.maven:kubejs-238086:3844402")
//    implementation fg.deobf("curse.maven:ponderjs-521714:3620231")
    implementation fg.deobf("curse.maven:cucumber-272335:3859559")
//    implementation fg.deobf("curse.maven:beyond-earth-377448:3807783")
    implementation fg.deobf("curse.maven:mystical-agriculture-246640:3878782")
    implementation fg.deobf("curse.maven:mysticalagradditions-256247:3859536")
//    implementation fg.deobf("curse.maven:croptopia-fabric-415438:3707657")
//    implementation fg.deobf("curse.maven:pams-harvestcraft-2-food-core-372534:3740562")
//    implementation fg.deobf("curse.maven:pams-harvestcraft-2-food-extended-402231:3740472")
//    implementation fg.deobf("curse.maven:gems-jewels-392943:3568024")
    implementation fg.deobf("curse.maven:curios-309927:3841948")
    implementation fg.deobf("curse.maven:botania-225643:3847141")
//    implementation fg.deobf("curse.maven:silent-lib-242998:3708359")
//    implementation fg.deobf("curse.maven:silent-gear-297039:3811128")
//    implementation fg.deobf("curse.maven:silents-gems-220311:3553197")
//    implementation fg.deobf("curse.maven:item-filters-forge-309674:3596362")
//    implementation fg.deobf("curse.maven:ftb-teams-forge-404468:3596307")
//    implementation fg.deobf("curse.maven:ftb-library-forge-404465:3598890")
//    implementation fg.deobf("curse.maven:ftb-quests-forge-289412:3596442")
//    implementation fg.deobf("curse.maven:ftb-chunks-forge-314906:3601595")
    implementation fg.deobf("curse.maven:mekanism-268560:3875976")
    implementation fg.deobf("curse.maven:buddycards-425991:3911357")
    implementation fg.deobf("curse.maven:ftb-industrial-contraptions-forge-539097:3873952")
//    implementation fg.deobf("curse.maven:pneumaticcraft-repressurized-281849:3815728")
//    implementation fg.deobf("curse.maven:cofh-core-69162:3803484")
//    implementation fg.deobf("curse.maven:thermal-foundation-222880:3803495")
//    implementation fg.deobf("curse.maven:thermal-expansion-69163:3803489")
//    implementation fg.deobf("curse.maven:thermal-integration-626708:3803496")
    implementation fg.deobf("curse.maven:mantle-74924:3829975")
    implementation fg.deobf("curse.maven:tinkers-construct-74072:3829979")
//    implementation fg.deobf("curse.maven:applied-energistics-2-223794:3646192")
//    implementation fg.deobf("curse.maven:terrablender-563928:3725996")
//    implementation fg.deobf("curse.maven:oh-the-biomes-youll-go-247560:3811457")
    implementation fg.deobf("curse.maven:blood-magic-224791:3864897")
    implementation fg.deobf("curse.maven:spark-361579:3824951")
    implementation fg.deobf("curse.maven:spirit-495509:3931224")
    implementation fg.deobf("curse.maven:fast-leaf-decay-230976:3693140")
}

// Example for how to get properties into the manifest for reading by the runtime..
jar {
    manifest {
        attributes([
                "Specification-Title": "Productive Bees",
                "Specification-Vendor": "productivebees",
                "Specification-Version": "1.0", // We are version 1 of ourselves
                "Implementation-Title": project.name,
                "Implementation-Version": "${version}",
                "Implementation-Vendor" :"productivebees",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "JDKDigital_productive-bees"
        property "sonar.organization", "jdkdigital"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}